force-app/main/default/objects/SurveyTaker__c/fields/Number_of_Rateable_Responses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rateable_Responses__c</fullName>
    <label>Number of Rateable Responses</label>
    <summaryFilterItems>
        <field>SurveyQuestionResponse__c.Response_Number__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>