force-app/main/default/objects/SurveyTaker__c/fields/Sum_of_Ratings__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Ratings__c</fullName>
    <label>Sum of Ratings</label>
    <summarizedField>SurveyQuestionResponse__c.Response_Number__c</summarizedField>
    <summaryFilterItems>
        <field>SurveyQuestionResponse__c.Response_Number__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>