force-app/main/default/objects/SurveyTaker__c/listViews/Sample_Survey_view.listView-meta.xml
<ListView>
    <fullName>Sample_Survey_view</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>Case__c</columns>
    <columns>Contact__c</columns>
    <columns>Average_Rating__c</columns>
    <columns>Survey__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>ALL SURVEYS taken</label>
</ListView>